--- a/index.html
+++ b/index.html
@@ -2,144 +2,115 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Visualizador Musical Geométrico</title>
+<title>Visualizador Minimal Musical</title>
 <script src="https://cdn.jsdelivr.net/npm/tone@14.8.41/build/Tone.js"></script>
 <style>
 body {
-  margin:0; display:flex; flex-direction:column; align-items:center; justify-content:center;
-  height:100vh; background:#0a0f1a; font-family:'Helvetica Neue',sans-serif; color:#fff;
+  margin:0; background:#0a0f1a; display:flex; flex-direction:column;
+  justify-content:center; align-items:center; height:100vh; font-family:sans-serif;
+  color:#fff;
 }
-h1 { font-weight:200; font-size:2em; margin-bottom:20px; color:#e0e0e0; }
-svg { width:80vw; max-width:500px; height:80vw; background:#0a0f1a; border-radius:50%; }
-.note-circle { fill:#222; stroke:#555; stroke-width:1.5; transition: all 0.3s; }
-.note-circle.active { fill:#6c5ce7; stroke:#4b4b7f; transform:scale(1.3); }
-polygon { fill:rgba(108,92,231,0.2); stroke:#6c5ce7; stroke-width:2; transition: all 0.3s ease; }
-.note-text { font-size:12px; fill:#fff; text-anchor:middle; dominant-baseline:middle; opacity:0; transition: all 0.3s; }
-.note-text.active { opacity:1; fill:#6c5ce7; font-weight:600; }
-#controls { margin-top:20px; display:flex; gap:10px; flex-wrap:wrap; justify-content:center; }
-select, button { padding:10px 16px; border-radius:6px; border:none; cursor:pointer; font-size:1em; background:#111; color:#fff; box-shadow:0 2px 6px rgba(0,0,0,0.2); }
-select:hover, button:hover { background:#6c5ce7; color:#fff; }
+svg { width:80vw; max-width:500px; height:80vw; }
+.circle-point { fill:#444; transition: all 0.3s ease; }
+.circle-point.active { fill:#6c5ce7; r:10; }
+line { stroke:#6c5ce7; stroke-width:1; opacity:0.3; transition: all 0.3s; }
+line.active { opacity:0.8; }
+#controls { margin-top:20px; display:flex; gap:10px; }
+button { padding:8px 16px; border:none; border-radius:6px; background:#111; color:#fff; cursor:pointer; }
+button:hover { background:#6c5ce7; }
 </style>
 </head>
 <body>
 
-<h1>Visualizador Musical Geométrico</h1>
-<svg id="circle-svg" viewBox="0 0 400 400">
-  <polygon id="shape-polygon"/>
-</svg>
-
+<svg id="circle-svg" viewBox="0 0 400 400"></svg>
 <div id="controls">
-  <select id="shape-selector"></select>
-  <select id="technique-selector">
-    <option value="arpegio">Arpegio</option>
-    <option value="acorde">Acorde</option>
-    <option value="secuencia">Secuencia Rotativa</option>
-  </select>
-  <button id="play-button">▶ Iniciar</button>
-  <button id="stop-button">■ Detener</button>
+  <button id="play">▶ Iniciar</button>
+  <button id="stop">■ Detener</button>
 </div>
 
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-  const synth = new Tone.PolySynth(Tone.Synth).toDestination();
   const svg = document.getElementById('circle-svg');
-  const shapePolygon = document.getElementById('shape-polygon');
-  const shapeSelector = document.getElementById('shape-selector');
-  const techniqueSelector = document.getElementById('technique-selector');
-  const playButton = document.getElementById('play-button');
-  const stopButton = document.getElementById('stop-button');
+  const playBtn = document.getElementById('play');
+  const stopBtn = document.getElementById('stop');
 
-  const notes = [
-    { name:'C', scientific:'C4'}, { name:'G', scientific:'G4'},
-    { name:'D', scientific:'D4'}, { name:'A', scientific:'A4'},
-    { name:'E', scientific:'E4'}, { name:'B', scientific:'B4'},
-    { name:'F#', scientific:'F#4'}, { name:'C#', scientific:'C#4'},
-    { name:'G#', scientific:'G#4'}, { name:'D#', scientific:'D#4'},
-    { name:'A#', scientific:'A#4'}, { name:'F', scientific:'F4'}
-  ];
+  const synth = new Tone.PolySynth(Tone.Synth, {
+    oscillator: { type:'sine' },
+    envelope: { attack:0.1, decay:0.3, sustain:0.4, release:1 }
+  }).toDestination();
 
-  const shapes = {3:'Triángulo',4:'Cuadrado',5:'Pentágono',6:'Hexágono',7:'Heptágono',8:'Estrella'};
-  const centerX=200, centerY=200, radius=150, noteRadius=20;
-  let currentRotation=0, numVertices=3, isPlaying=false;
-  let animationId;
+  const centerX=200, centerY=200, radius=150, numPoints=12;
+  let points=[], lines=[], currentRotation=0, animationId, isPlaying=false;
 
-  // Crear selector de figuras
-  for(const v in shapes){
-    const opt=document.createElement('option');
-    opt.value=v; opt.textContent=shapes[v];
-    shapeSelector.appendChild(opt);
-  }
-
-  // Dibujar círculo de notas
-  notes.forEach((note,i)=>{
-    const angle=(i/12)*2*Math.PI-Math.PI/2;
+  // Crear puntos en círculo
+  for(let i=0;i<numPoints;i++){
+    const angle=(i/numPoints)*2*Math.PI;
     const x=centerX+radius*Math.cos(angle);
     const y=centerY+radius*Math.sin(angle);
-
     const circle=document.createElementNS("http://www.w3.org/2000/svg","circle");
-    circle.setAttribute('id',`note-${i}`);
-    circle.setAttribute('class','note-circle');
-    circle.setAttribute('cx',x); circle.setAttribute('cy',y); circle.setAttribute('r',noteRadius);
+    circle.setAttribute('cx',x); circle.setAttribute('cy',y); circle.setAttribute('r',5);
+    circle.setAttribute('class','circle-point');
     svg.appendChild(circle);
+    points.push({x,y,el:circle});
+  }
 
-    const text=document.createElementNS("http://www.w3.org/2000/svg","text");
-    text.setAttribute('class','note-text');
-    text.setAttribute('x',x); text.setAttribute('y',y);
-    text.textContent=note.name;
-    svg.appendChild(text);
-  });
+  // Crear líneas entre puntos
+  for(let i=0;i<numPoints;i++){
+    for(let j=i+1;j<numPoints;j++){
+      const line=document.createElementNS("http://www.w3.org/2000/svg","line");
+      line.setAttribute('x1',points[i].x); line.setAttribute('y1',points[i].y);
+      line.setAttribute('x2',points[j].x); line.setAttribute('y2',points[j].y);
+      svg.appendChild(line);
+      lines.push(line);
+    }
+  }
 
-  function updateShape(){
-    const points=[], selected=[];
-    document.querySelectorAll('.note-circle').forEach(c=>c.classList.remove('active'));
-    document.querySelectorAll('.note-text').forEach(t=>t.classList.remove('active'));
+  // Notas para cada punto
+  const scaleNotes=['C4','D4','E4','G4','A4','B4','C5','D5','E5','G5','A5','B5'];
 
-    for(let i=0;i<numVertices;i++){
-      const step=12/numVertices;
-      const idx=Math.round((currentRotation+i*step)%12);
-      const note=notes[idx];
-      selected.push(note);
-      document.getElementById(`note-${idx}`).classList.add('active');
-      document.querySelectorAll('.note-text')[idx].classList.add('active');
-
-      const angle=(idx/12)*2*Math.PI-Math.PI/2;
+  function updateCircle(){
+    currentRotation += 0.002; // giro suave
+    points.forEach((p,i)=>{
+      const angle=(i/numPoints)*2*Math.PI + currentRotation;
       const x=centerX+radius*Math.cos(angle);
       const y=centerY+radius*Math.sin(angle);
-      points.push(`${x},${y}`);
+      p.el.setAttribute('cx',x); p.el.setAttribute('cy',y);
+    });
+    // actualizar líneas
+    let lineIdx=0;
+    for(let i=0;i<numPoints;i++){
+      for(let j=i+1;j<numPoints;j++){
+        lines[lineIdx].setAttribute('x1',points[i].el.cx.baseVal.value);
+        lines[lineIdx].setAttribute('y1',points[i].el.cy.baseVal.value);
+        lines[lineIdx].setAttribute('x2',points[j].el.cx.baseVal.value);
+        lines[lineIdx].setAttribute('y2',points[j].el.cy.baseVal.value);
+        lineIdx++;
+      }
     }
-
-    shapePolygon.setAttribute('points',points.join(' '));
-    return selected.map(n=>n.scientific);
   }
 
+  let stepCount=0;
   function playStep(){
-    const notesToPlay = updateShape();
-    const technique = techniqueSelector.value;
-
-    if(technique==='arpegio'){
-      notesToPlay.forEach((note,i)=>{
-        setTimeout(()=>synth.triggerAttackRelease(note,'8n'), i*300);
-      });
-    } else if(technique==='acorde'){
-      synth.triggerAttackRelease(notesToPlay,'4n');
-    } else { // secuencia rotativa
-      notesToPlay.forEach(note=>synth.triggerAttackRelease(note,'8n'));
-    }
-
-    currentRotation=(currentRotation+0.1)%12; // Giro suave
-    animationId = requestAnimationFrame(playStep);
+    updateCircle();
+    // Encender punto rítmico
+    const idx=Math.floor(stepCount%numPoints);
+    points.forEach((p,i)=>p.el.classList.toggle('active',i===idx));
+    // Tocar nota
+    synth.triggerAttackRelease(scaleNotes[idx],'8n');
+    stepCount++;
+    animationId=requestAnimationFrame(playStep);
   }
 
-  function startPlay(){ if(!isPlaying){ isPlaying=true; Tone.start(); playStep(); } }
-  function stopPlay(){ isPlaying=false; cancelAnimationFrame(animationId); }
-
-  shapeSelector.addEventListener('change',e=>{ numVertices=parseInt(e.target.value,10); updateShape(); });
-  playButton.addEventListener('click',startPlay);
-  stopButton.addEventListener('click',stopPlay);
-
-  numVertices=parseInt(shapeSelector.value,10);
-  updateShape();
+  playBtn.addEventListener('click',()=>{
+    if(!isPlaying){ isPlaying=true; Tone.start(); playStep(); }
+  });
+  stopBtn.addEventListener('click',()=>{
+    isPlaying=false;
+    cancelAnimationFrame(animationId);
+    points.forEach(p=>p.el.classList.remove('active'));
+  });
 });
 </script>
+
 </body>
 </html>
